--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Colorful Days</title>
+    <meta
+      name="description"
+      content="Colorful Days is a personalized web calendar for vibrant scheduling
+    and seamless collaboration."
+    />
   </head>
   <body>
     <div id="root"></div>
